# qwery-core

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/ai-agent-eval/: .gitignore  ARCHITECTURE.md  package.json  tsconfig.json
apps/ai-agent-eval-ui/: index.html  package.json  vite.config.ts
apps/ai-agent-eval-ui/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
apps/ai-agent-eval/src/: index.ts  server.ts
apps/desktop/: .gitignore  package.json  tsconfig.json  vite.config.ts
apps/desktop/app/: root.tsx  routes.ts
apps/desktop/scripts/: download-bun.js  validate-extensions-bundle.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/server/: .env.example  eslint.config.mjs  package.json
apps/server/__tests__/: datasources.test.ts  health.test.ts  mcp-handler.test.ts  organizations.test.ts  projects.test.ts
apps/server/scripts/: build-api-server.cjs
apps/server/src/: index.ts  server.ts
apps/web/: .env.example  .gitignore  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: WHAT_SHOULD_ENHANCE.md  portless-local-dev.md
docs/architecture/: error-handling.md
docs/rfcs/: 007_session_compaction_and_pruning.md
scripts/: exec-dev-stack-clients.sh  lib-dev-client-args.sh  open-dev-terminals.sh  run-dev-clients.sh  setup-vscode.sh  setup-worktree.sh
tooling/extensions/: build.js
tooling/vscode/: tasks.json
(+265 files in other folders)
